Fixed bugs in Modal.css
Issue #49
In  #ModalForm, changed percentages into pixels to prevent the form area getting blurry casued by resizing.

--- a/src/Forms/Forms.css
+++ b/src/Forms/Forms.css
@@ -4,11 +4,6 @@
     font-weight: bold;
   }
   
-  body {
-    margin-left: 2%;
-    margin-right: 2%;
-  }
-  
   input[type=text], select {
     width: 100%;
     padding: 12px;
@@ -54,8 +49,6 @@
     border-radius: 5px;
     background-color: #f2f2f2;
     padding: 20px;
-    margin-left: 5%;
-    margin-right: 5%;
   }
   
   .col-25 {
